--- a/example/open-telemetry/docker-compose.yaml
+++ b/example/open-telemetry/docker-compose.yaml
@@ -2,6 +2,24 @@ version: '3.0'
 
 services:
 
+  prometheus:
+    image: prom/prometheus:v2.25.2
+    container_name: prometheus
+    hostname: prometheus
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    ports:
+      - 9090:9090
+    networks:
+      - almex-net
+    restart: always
+
   jaeger-collector:
       image: jaegertracing/jaeger-collector:1.22.0
       command: ["--es.num-shards=1", "--es.num-replicas=0", "--es.server-urls=http://elasticsearch:9200", "--collector.zipkin.host-port=:9411"]
@@ -19,7 +37,7 @@ services:
       depends_on:
         - elasticsearch
       networks:
-      - almex-net
+        - almex-net
 
   jaeger-query:
     image: jaegertracing/jaeger-query:1.22.0
@@ -36,7 +54,7 @@ services:
     depends_on:
       - elasticsearch
     networks:
-    - almex-net
+      - almex-net
 
   jaeger-agent:
     image: jaegertracing/jaeger-agent:1.22.0
@@ -65,6 +83,7 @@ services:
     ports:
       - "13133:13133"
       - "55680:55680"
+      - "8888:8888"
     networks:
     - almex-net
     depends_on:
@@ -91,7 +110,7 @@ services:
     networks:
     - almex-net
     healthcheck:
-      interval: 10s
+      interval: 300s
       retries: 20
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
 
@@ -109,13 +128,15 @@ services:
     networks:
     - almex-net
     healthcheck:
-      interval: 10s
+      interval: 300s
       retries: 20
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:5601/api/status
 
 volumes:
   esdata:
     driver: local
+  prometheus_data: { }
+  grafana_data: { }
 
 networks:
   almex-net:
