--- a/example/open-telemetry/prometheus/prometheus.yml
+++ b/example/open-telemetry/prometheus/prometheus.yml
@@ -2,6 +2,6 @@ scrape_configs:
   - job_name: 'otel-collector'
     scrape_interval: 10s
     static_configs:
-      - targets: ['0.0.0.0:8889']
-      - targets: ['0.0.0.0:8888']
+      - targets: ['collector:8889']
+      - targets: ['collector:8888']
 
