--- a/example/pom.xml
+++ b/example/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.13.RELEASE</version>
+		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -19,6 +19,7 @@
 		<java.version>1.8</java.version>
 		<otel-spring-boot-starters.version>1.0.1-alpha</otel-spring-boot-starters.version>
 		<otel-exporter.version>1.0.1</otel-exporter.version>
+		<prom.version>0.10.0</prom.version>
 		<spring-boot.run.jvmArguments></spring-boot.run.jvmArguments>
 	</properties>
 
@@ -84,6 +85,15 @@
 			<artifactId>opentelemetry-exporter-logging</artifactId>
 			<version>${otel-exporter.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -98,7 +108,7 @@
 					<jvmArguments>
 						-Dotel.resource.attributes=service.name=almaraz-example
 						-Dotel.exporter.otlp.endpoint=http://localhost:55680
-						-Dotel.metrics.exporter=otlp
+						-Dotel.metrics.exporter=none
 
 						${spring-boot.run.jvmArguments}
 					</jvmArguments>
