limiting exposed actuator web services

--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -28,7 +28,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: "health, prometheus, info"
   health:
     probes:
       enabled: true
