--- a/example/open-telemetry/prometheus/prometheus.yml
+++ b/example/open-telemetry/prometheus/prometheus.yml
@@ -3,3 +3,14 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['collector:8889']
+  - job_name: 'tempo'
+    scrape_interval: 10s
+    scrape_timeout: 1s
+    static_configs:
+      - targets: [ 'tempo:80' ]
+  - job_name: 'app-actuator'
+    scrape_interval: 5s
+    scrape_timeout: 1s
+    metrics_path: /api/actuator/prometheus
+    static_configs:
+      - targets: [ 'almaraz-example-app:8090' ]
