--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: almaraz-example
+    name: almaraz-example-prometheus
 
 server:
   port: 8080
@@ -9,7 +9,8 @@ logging:
   level:
     root: INFO
     com.elevenpaths: DEBUG
-    io.opentelemetry: INFO
+    io.opentelemetry: DEBUG
+    io.prometheus: DEBUG
     org.springframework.boot.actuate: INFO
     org.springframework: INFO
 
@@ -26,9 +27,11 @@ management:
     health:
       show-details: always
   endpoints:
+    enable-by-default: false
     web:
       exposure:
-        include: "health, prometheus, info"
+        include: "health, info, prometheus, metrics"
+    #    exclude: "metrics"
   health:
     probes:
       enabled: true
