--- a/example/open-telemetry/prometheus/prometheus.yml
+++ b/example/open-telemetry/prometheus/prometheus.yml
@@ -1,13 +1,13 @@
 scrape_configs:
-  - job_name: 'otel-collector'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['collector:8889']
-  - job_name: 'tempo'
-    scrape_interval: 10s
-    scrape_timeout: 1s
-    static_configs:
-      - targets: [ 'tempo:80' ]
+#  - job_name: 'otel-collector'
+#    scrape_interval: 5s
+#    static_configs:
+#      - targets: ['collector:8889']
+#  - job_name: 'tempo'
+#    scrape_interval: 10s
+#    scrape_timeout: 1s
+#    static_configs:
+#      - targets: [ 'tempo:80' ]
   - job_name: 'app-actuator'
     scrape_interval: 5s
     scrape_timeout: 1s
